--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-google-recaptcha": "^2.1.2",
+    "@types/react-router-dom": "^5.3.1",
     "formik": "^2.2.9",
     "node-sass": "5.0.0",
     "react": "^17.0.2",
