--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dccs/react-searchable-select-mui": "^0.2.11",
     "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -20,6 +21,8 @@
     "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.1.0",
+    "react-select-search": "^3.0.8",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
