--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-google-recaptcha": "^2.1.2",
     "@types/react-router-dom": "^5.3.1",
+    "axios": "^0.24.0",
     "formik": "^2.2.9",
     "node-sass": "5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-hooks-global-state": "^1.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.1.0",
