--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^5.1.0",
     "react-select-search": "^3.0.8",
+    "sass": "^1.43.4",
     "typescript": "^4.1.2",
     "use-http": "^1.0.26",
     "web-vitals": "^1.0.1"
