--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "x77capital",
   "version": "0.1.0",
   "engines": {
-    "node" : ">=14.0.0"
+    "node" : "14.17.4"
   },
   "private": true,
   "dependencies": {
