--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "x77capital",
   "version": "0.1.0",
   "engines": {
-    "node" : "14.17.4"
+    "node": "14.17.4"
   },
   "private": true,
   "dependencies": {
@@ -56,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
